# citty

./: .gitignore  AUTHORS  ChangeLog  README  autogen.sh  config.h.in  configure.ac
lib/: strlcpy.c
src/: Makefile.am  citty.c  citty.man
